added loading indication

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   </pre>
 
                   <h5>Result</h5>
-                  $1 equals €<span class="xratejs" from='[{"USD": 1}]' to="EUR"></span>.
+                  $1 equals €<span class="xratejs" from='[{"USD": 1}]' to="EUR">loading...</span>.
             </div>
     
             <h3>Total portfolio example</h3>
@@ -38,7 +38,7 @@
                         <span class="newline"><span class="identifier">class</span>=<span class="value">"xratejs"</span>
                         <span class="newline"><span class="identifier">from</span>=<span class="value">'[{"BTC": 0.5}, {"GBP": 20}, {"EUR": 10}]'</span>
                         <span class="newline"><span class="identifier">to</span>=<span class="value">"JPY"</span>
-                        <span class="newline"></span>&lt;<span class="identifier-native">/span</span>&gt;</span>
+                        <span class="newline"></span>loading...&lt;<span class="identifier-native">/span</span>&gt;</span>
                         <span class="newline">
                         <span class="newline">&lt;<span class="identifier-native">span</span>
                         <span class="newline"><span class="identifier">class</span>=<span class="value">"xratejs"</span>
