--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Xratejs demo</title>
+        <title>Xratejs</title>
         <link rel = "icon" href = "./assets/favicon.ico" type = "image/x-icon">
         <link rel = "shortcut icon" href = "./assets/favicon.ico" type = "image/x-icon">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
